--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-dragon-habitat.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-dragon-habitat.cfg
@@ -35,9 +35,9 @@ PART
 	category = Utility
 	subcategory = 0
 
-	title = Dragon Expandable Habitat Trunk
+	title = #LEE-dragon-habitat-titl
 	manufacturer = #LTD-Agency-titl
-	description = 2.5m habitat trunk with decoupler for Dragon 2 spacecraft on interplanetary missions. Designed to have twin solar panels with retractable covers attached and upper landing gear. Has batteries and extra monopropellent fuel.
+	description = #LEE-dragon-habitat-desc
 	tags = #autoLOC_500297 //#autoLOC_500297 = base cabin (can outpost passenger statio tour tuna
 
 	mass = 0.9 // inflatable
