--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-eng-nerva-2.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-eng-nerva-2.cfg
@@ -36,9 +36,9 @@ PART
 	category = Engine
 	subcategory = 0
 
-	title = NERVA 2 NRX Nuclear Engine
+	title = #LEE-eng-nerva-2-titl
 	manufacturer = #LTD-Agency-titl
-	description = NERVA II Nuclear vacuum engine, mount and protective cowling designed to be attached to 2.5m upper tank of long-range space vehicles.
+	description = #LEE-eng-nerva-2-desc
 	tags = #autoLOC_500438 // active atom efficient engine inter liquid (nerv nuclear nuke orbit propuls radio reactor vacuum
 
 	mass = 4.75 // was 2.0 // LV-N is 3
