--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-eng-vtol.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-eng-vtol.cfg
@@ -27,9 +27,9 @@ PART
 	category = Propulsion
 	subcategory = 0
 
-	title = Advanced PulseJet VTOL Engine
+	title = #LEE-eng-vtol-titl
 	manufacturer = #LTD-Agency-titl
-	description = Monopropellant-burning, advanced hybrid pulseJet engine contained in a 1.25m cowling, switchable between air-breathing and closed system modes for single stage to orbit spacecraft. Has vector thrust that can be switched between vertical and forward modes. 
+	description = #LEE-eng-vtol-desc
 	tags = #autoLOC_500417 // aircraft jet plane propuls (whiplash
 
 	mass = 0.4
