--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-falcon-stage-short.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-falcon-stage-short.cfg
@@ -31,9 +31,9 @@ PART
 	category = Coupling
 	subcategory = 0
 
-	title = Falcon Short Interstage
+	title = #LEE-falcon-stage-short-titl
 	manufacturer = #LTD-Agency-titl
-	description = Simple 2.5m utility decoupler fairing for LazTek Falcon.
+	description = #LEE-falcon-stage-short-desc
 	tags = #autoLOC_500816 // break decouple separat split stag
 	// tags = #autoLOC_500174 // aero )cap cargo cone contain drag fairing hollow inter nose payload protect rocket shroud stage (stor transport
 
