--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-falcon-tanker.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-falcon-tanker.cfg
@@ -28,9 +28,9 @@ PART
 	category = FuelTank
 	subcategory = 0
 
-	title = Falcon Tanker Stage Tank
+	title = #LEE-falcon-tanker-titl
 	manufacturer = #LTD-Agency-titl
-	description = 2.5m upper stage liquid fuel and monopropellant tank for SpaceX Falcon Heavy Tanker launch configuration.
+	description = #LEE-falcon-tanker-desc
 	tags = #autoLOC_500612 // fuel fueltank mono propellant rcs
 
 	mass = 2
