--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-heatshield-explorer-2.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-heatshield-explorer-2.cfg
@@ -30,9 +30,9 @@ PART
 	category = Thermal
 	subcategory = 0
 
-	title = Dragon V2 Habitat Heat Shield
+	title = #LEE-heatshield-explorer-2-titl
 	manufacturer = #LTD-Agency-titl
-	description = 2.5m PICA-X protective heat shield with bottom decoupler for atmospheric entry of LazTek Explorer V2 Habitat module.
+	description = #LEE-heatshield-explorer-2-desc
 	tags = #autoLOC_500186 // ablat drag entry insulate protect re- rocket therm
 
 	mass = 0.15
