--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-leg-landing.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-leg-landing.cfg
@@ -27,9 +27,9 @@ PART
 	category = Ground
 	subcategory = 0
 
-	title = Exploration Dragon Habitat Landing Leg
+	title = #LEE-leg-landing-titl
 	manufacturer = #LTD-Agency-titl
-	description = Landing leg for Dragon Habitat, designed to be attached in a set of four.
+	description = #LEE-leg-landing-desc
 	tags = #autoLOC_500881 // ground land leg support
 
 	mass = 0.05
