--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-solar-cover-retractable.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-solar-cover-retractable.cfg
@@ -26,9 +26,9 @@ PART
 	category = Aero
 	subcategory = 0
 
-	title = Dragon Retractable Solar Panel Fairing
+	title = #LEE-solar-cover-retractable-titl
 	manufacturer = #LTD-Agency-titl
-	description = Retractable fairing for Dragon solar panels. Designed to be stacked on attachment points in pairs for use on interplanetary missions.
+	description = #LEE-solar-cover-retractable-desc
 	tags = #autoLOC_500765 // body build construct cover extend fabricate plat structur support
 
 	mass = 0.05
