--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-solar-panel.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-solar-panel.cfg
@@ -28,9 +28,9 @@ PART
 	category = Electrical
 	subcategory = 0
 
-	title = Falcon Recessed Solar Array
+	title = #LEE-solar-panel-titl
 	manufacturer = #LTD-Agency-titl
-	description = Recessed, covered solar panel array designed to attach to 2.5m Falcon rocket section to provide power for orbital and exploratory purposes.
+	description = #LEE-solar-panel-desc
 	tags = #autoLOC_500381 // charge deploy e/c elect energ extend fold generat (light panel photo power retract sun track unfold volt watt
 
 	mass = 0.3
