--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-tank-dragon-mono-400.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-tank-dragon-mono-400.cfg
@@ -26,9 +26,9 @@ PART
 	category = FuelTank
 	subcategory = 0
 
-	title = 400 Monopropellant Tank
+	title = #LEE-tank-dragon-mono-400-titl
 	manufacturer = #LTD-Agency-titl
-	description = Attachable monopropellant tank for extended use of Dragon spacecraft.
+	description = #LEE-tank-dragon-mono-400-desc
 	tags = #autoLOC_500612 // fuel fueltank mono propellant rcs
 	
 	mass = 0.05
