--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-falcon-tanker.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-falcon-tanker.cfg
@@ -13,9 +13,17 @@ PART
 	author = Lazarus Luan and zer0kerbal
 
 	MODEL { model = LazTek/ExplorationExpansion/Assets/lee-falcon-tanker }
+	MODEL
+	{
+		model = LazTek/LaunchPack/Assets/llp-probe-falcon
+		postition = 0.0, 8.0300000003, 0.0
+	}
 	scale = 1.0
 	rescaleFactor = 0.85
 	bulkheadProfiles = size2
+
+	CrewCapacity = 0
+	vesselType = Probe
 
 	attachRules = 1,1,1,1,0
 	node_stack_top = 0.0, 7.95, 0.0, 0.0, 1.0, 0.0, 3
@@ -49,15 +57,53 @@ PART
 
 	MODULE
 	{
+		name = ModuleCommand
+		minimumCrew = 0
+		hasHibernation = True
+		hibernation = False
+		hibernateOnWarp = True
+		hibernationMultiplier = 0.00125
+		defaultControlPointDisplayName = #autoLOC_6011003 // Default
+		RESOURCE
+		{
+			name = ElectricCharge
+			rate = 0.005
+		}
+		CONTROLPOINT
+		{
+			name = reverse
+			displayName = #autoLOC_6011004 // Reversed
+			orientation = 0,0,180
+		}
+	}
+
+	MODULE
+	{
 		name = ModuleSAS
 		SASServiceLevel = 2
+	}
+
+	MODULE
+	{
+		name = ModuleReactionWheel
+		actionGUIName = #autoLOC_502014 // Toggle RW
+		authorityLimiter = 100
+		PitchTorque = 18
+		YawTorque = 18
+		RollTorque = 18
+		torqueResponseSpeed = 40
+		RESOURCE
+		{
+			name = ElectricCharge
+			rate = 0.36 // was 1.8 - stock would be 0.54, but advanced
+		}
 	}
 
 	RESOURCE
 	{
 		name = ElectricCharge
-		amount = 200
-		maxAmount = 200
+		amount = 750
+		maxAmount = 750
 	}
 
 	RESOURCE
