--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-dock-aft.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-dock-aft.cfg
@@ -15,10 +15,10 @@ PART
 	MODEL { model = LazTek/ExplorationExpansion/Assets/lee-dock-aft }
 	scale = 1.0
 	rescaleFactor = 0.85
-	bulkheadProfiles = size2, srf
+	bulkheadProfiles = srf
 
 	attachRules = 0,1,0,0,0
-	node_attach = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 1
+	node_attach = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 1, 1
 
 	sound_decoupler_fire = decouple
 	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
