--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-dragon-habitat.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-dragon-habitat.cfg
@@ -22,9 +22,10 @@ PART
 	INTERNAL { name = DragonHabitat }
 
 	attachRules = 1,0,1,1,0
-	node_stack_top = 0.0, 1.12, 0.0, 0.0, -1.0, 0.0, 3
-	node_stack_bottom = 0.0, -2.1, 0.0, 0.0, -1.0, 0.0, 3
-	node_stack_attach = 0.0, -1.0, 0.0, 0.0, 1.0, 0.0, 2
+	node_stack_top = 0.0, 1.12, 0.0, 0.0, -1.0, 0.0, 3, 1
+	node_stack_bottom = 0.0, -2.1, 0.0, 0.0, -1.0, 0.0, 3, 1
+	node_stack_attach = 0.0, -1.0, 0.0, 0.0, 1.0, 0.0, 2, 1
+	node_attach = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0, 1
 
 	sound_decoupler_fire = decouple
 	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
