--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-eng-nerva-2.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-eng-nerva-2.cfg
@@ -15,11 +15,12 @@ PART
 	MODEL { model = LazTek/ExplorationExpansion/Assets/lee-eng-nerva-2 }
 	scale = 1.0
 	rescaleFactor = 0.85
-	bulkheadProfiles = size2, srf
+	bulkheadProfiles = size3, srf
 
 	attachRules = 1,0,1,1,0
-	node_stack_top = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 2
-	node_stack_bottom = 0.0, -4.0, 0, 0.0, -1.0, 0.0, 2
+	node_stack_top = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 3, 1
+	node_stack_bottom = 0.0, -4.0, 0, 0.0, -1.0, 0.0, 3, 1
+	node_attach = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0, 1
 
 	fx_exhaustFlame_blue = 0.0, -1.6, 0.0, 0.0, 1.0, 0.0, running
 	fx_exhaustLight_blue = 0.0, -1.6, 0.0, 0.0, 0.0, 1.0, running
