--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-eng-vtol.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-eng-vtol.cfg
@@ -18,8 +18,8 @@ PART
 	bulkheadProfiles = size1, srf
 
 	attachRules = 1,1,0,1,1
-	node_stack_top = 0.0, 1.85, 0.0, 0.0, 1.0, 0.0
-	node_attach = 0.0, 0.0, 0.7, 0.0, 0.0, -1.0
+	node_stack_top = 0.0, 1.85, 0.0, 0.0, 1.0, 0.0, 1, 1
+	node_attach = 0.0, 0.0, 0.7, 0.0, 0.0, -1.0, 1, 1
 
 	TechRequired = hypersonicFlight
 	entryCost = 40000
