--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-falcon-tanker.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-falcon-tanker.cfg
@@ -26,9 +26,10 @@ PART
 	vesselType = Probe
 
 	attachRules = 1,1,1,1,0
-	node_stack_top = 0.0, 7.95, 0.0, 0.0, 1.0, 0.0, 3
-	node_stack_bottom = 0.0, -8.5, 0.0, 0.0, -1.0, 0.0, 3
-	node_stack_connect1 = 0.0, -8.45, 0.0, 0.0, -1.0, 0.0, 3
+	node_stack_top = 0.0, 7.95, 0.0, 0.0, 1.0, 0.0, 3, 1
+	node_stack_bottom = 0.0, -8.5, 0.0, 0.0, -1.0, 0.0, 3, 1
+	node_stack_connect1 = 0.0, -8.45, 0.0, 0.0, -1.0, 0.0, 3, 1
+	node_attach = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0, 1
 
 	TechRequired = veryHeavyRocketry
 	entryCost = 7000
