--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-heatshield-explorer-2.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-heatshield-explorer-2.cfg
@@ -15,11 +15,12 @@ PART
 	MODEL { model = LazTek/ExplorationExpansion/Assets/lee-heatshield-explorer-2 }
 	scale = 1.0
 	rescaleFactor = 0.85
-	bulkheadProfiles = size2
+	bulkheadProfiles = size3
 
 	attachRules = 1,0,1,1,0
-	node_stack_top = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0
-	node_stack_bottom = 0.0, -0.08, 0.0, 0.0, -1.0, 0.0
+	node_stack_top = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 3, 1
+	node_stack_bottom = 0.0, -0.08, 0.0, 0.0, -1.0, 0.0, 3, 1
+	node_attach = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0, 1
 
 	sound_decoupler_fire = decouple
 	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
