--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-leg-landing.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-leg-landing.cfg
@@ -18,8 +18,7 @@ PART
 	bulkheadProfiles = srf
 
 	attachRules = 0,1,0,0,1
-	node_attach = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0
-	stackSymmetry = 3
+	node_attach = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0, 1, 1
 	
 	TechRequired = fieldScience
 	entryCost = 13600
