--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-solar-cover-retractable.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-solar-cover-retractable.cfg
@@ -18,7 +18,7 @@ PART
 	bulkheadProfiles = srf
 
 	attachRules = 0,1,0,1,1
-	node_attach = 0.0, 0.0, -0.18, 0.0, 0.0, -1.0, 1
+	node_attach = 0.0, 0.0, -0.18, 0.0, 0.0, -1.0, 1, 1
 
 	TechRequired = heavyAerodynamics
 	entryCost = 8000
