--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-tank-dragon-mono-400.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-tank-dragon-mono-400.cfg
@@ -17,12 +17,12 @@ PART
 	rescaleFactor = 0.85
 	bulkheadProfiles = srf
 
-	attachRules = 0,1,0,1,0
-	node_attach = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0
+	attachRules = 0,1,0,1,1
+	node_attach = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0, 1, 1
 
 	TechRequired = veryHeavyRocketry
 	entryCost = 4000
-	cost = 120
+	cost = 300
 	category = FuelTank
 	subcategory = 0
 
